update package.json code

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Example page for react-drag-guide-lines" />
-  <title>my-react-typescript-package</title>
+  <title>React Drag Guide Lines</title>
 </head>
 
 <body>
